argocd/argocd-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    name: http
  - port: 443
    targetPort: 8080
    nodePort: 30443
    name: https
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: argocd-ip
    networking.gke.io/managed-certificates: argocd-ssl-cert
    kubernetes.io/ingress.class: gce
    cloud.google.com/backend-config: '{"default": "argocd-backend-config"}'
spec:
  rules:
  - host: argocd.YOUR_DOMAIN.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              number: 80
